--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -109,6 +109,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
     width: 60%;
+    margin-bottom: 60px;
 }
 
 .home_container {
