--- a/templates/home.html
+++ b/templates/home.html
@@ -49,8 +49,8 @@
                                 {{ guide.title }}
                             </a>
                         </h4>
-                        <h5>By <a href="{{ url_for('profile_page', username=guide.user.username) }}" class="profile-link">{{ guide.user.username
-                                }}</a></h5>
+                        <h5>By <a href="{{ url_for('profile_page', user_id=guide.user_id) }}" class="profile-link">{{ guide.user.username }}</a>
+                        </h5>
                         <div class="guide_content_preview">
                             {{ guide.content[:150] | striptags }}{% if guide.content|length > 100 %}...{% endif %}
                         </div>
