--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <title>{% block title %}SwatGuide{% endblock %}</title>
     
     {# External resources and stylesheets #}
-    <link rel="icon" href="{{ url_for('static', filename='images/swat_guide_logo3.svg') }}">
+    <link rel="icon" href="{{ url_for('static', filename='images/swat_guide_logo3.png') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
